# TilingWindowManager

./: .gitignore  BRANCH_README.md  COMMAND_SYSTEM_COMPLETE.md  CONFIG_HOT_RELOAD_COMPLETE.md  Cargo.toml  DETAILED_ROADMAP.md  DPI_TESTING_GUIDE.md  FINAL_CHECKLIST.md  HOT_RELOAD_GUIDE.md  HYPRLAND_WAYBAR_RESEARCH.md  IMPLEMENTATION_COMPLETE.md  IPC_CLIENT_IMPLEMENTATION_COMPLETE.md  KEYBINDINGS_GUIDE.md  KEYBINDS_IMPLEMENTATION_COMPLETE.md  MAIN_APP_IMPLEMENTATION.md  PHASE_1_TASKS.md  PHASE_2_TASKS.md  PHASE_2_TASK_2_4_COMPLETE.md  PHASE_2_TASK_2_8_COMPLETE.md  PHASE_3_TASKS.md  PHASE_4_TASKS.md  PHASE_5_DOCUMENTATION_VERIFICATION.md  PHASE_5_EXAMPLE_SCRIPTS_COMPLETE.md  PHASE_5_TASKS.md  PHASE_5_TASK_1_COMPLETE.md  PHASE_5_TASK_1_VALIDATION.md  PHASE_5_TASK_2_COMPLETE.md  PHASE_5_TASK_2_VALIDATION.md  PHASE_5_TASK_3_COMPLETE.md  PHASE_5_TASK_3_VALIDATION.md  PHASE_5_TASK_4_COMPLETE.md  PHASE_5_TASK_4_SUMMARY.md  PHASE_5_TASK_5_6_VERIFICATION.md  PHASE_5_TASK_5_7_COMPLETE.md  PHASE_5_TASK_5_COMPLETE.md  PHASE_6_TASKS.md  PHASE_6_TASKS_SUMMARY.md  PHASE_6_TASK_6_4_COMPLETE.md  PHASE_6_TASK_COMPLETION.md  REBRANDING_SUMMARY.md  (+23 more)
config/: config.toml  default_config.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_tests.rs
crates/command-palette/: Cargo.toml
crates/command-palette/assets/: command-palette.css
crates/command-palette/src/: commands.rs  ipc_client.rs  main.rs  recent.rs  scanner.rs
crates/core/: Cargo.toml  MAIN_APP_TESTING.md
crates/core/examples/: event_loop_demo.rs  ipc_integration_example.rs  parse_config.rs  show_ipc_json.rs  test_ipc_integration.rs  test_ipc_protocol.rs  test_ipc_server.rs  validate_default_config.rs  virtual_desktop_demo.rs  win32_demo.rs  workspace_persistence_demo.rs
crates/core/src/: EVENT_LOOP_TESTING.md  commands.rs  event_loop.rs  lib.rs  main.rs
crates/core/src/app/: commands.rs  event_handling.rs  initialization.rs  mod.rs
crates/core/src/config/: mod.rs  parser.rs  schema.rs  validator.rs  validator_tests.rs  watcher.rs
crates/core/src/ipc/: client.rs  events.rs  handler.rs  mod.rs  protocol.rs  server.rs
crates/core/src/keybinds/: manager.rs  mod.rs  parser.rs
crates/core/src/rules/: executor.rs  matcher.rs  mod.rs
crates/core/src/utils/: WIN32_TESTING.md  win32.rs
crates/core/src/utils/win32/: enumeration.rs  filters.rs  handle.rs  mod.rs
crates/core/src/window_manager/: core.rs  focus.rs  layout_operations.rs  mod.rs  monitor.rs  monitor_ops.rs  tree.rs  tree_tests.rs  window.rs  window_operations.rs  workspace_operations.rs
crates/core/src/window_manager/layout/: dwindle.rs  master.rs  mod.rs
crates/core/src/workspace/: README.md  auto_save.rs  core.rs  manager.rs  manager_tests.rs  mod.rs  monitor_integration.rs  persistence.rs  state.rs  switching.rs  virtual_desktop.rs  virtual_desktop_tests.rs  window_ops.rs
crates/core/tests/: config_schema_tests.rs  integration.rs  keybinds_tests.rs
crates/status-bar/: Cargo.toml
crates/status-bar/assets/: status-bar.css  status-bar.css.backup
crates/status-bar/src/: appbar.rs  config.rs  ipc_client.rs  lib.rs  main.rs  module.rs  monitor.rs
crates/status-bar/src/modules/: battery.rs  clock.rs  cpu.rs  memory.rs  mod.rs  window_title.rs  workspaces.rs
docs/: CLI.md  IPC.md
examples/ipc/: README.md
examples/ipc/powershell/: monitor-windows.ps1  switch-workspace.ps1  toggle-layout.ps1  workspace-status.ps1
examples/ipc/python/: auto_tiler.py  window_info.py  window_monitor.py  workspace_status.py
