[package]
name = "tenraku-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tenrakuctl"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.4", features = ["derive", "cargo"] }
comfy-table = "7.1"
colored = "2.1"
