[package]
name = "tenraku-palette"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tenraku-palette"
path = "src/main.rs"

[dependencies]
# UI Framework
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-desktop = "0.6"

# Fuzzy matching
sublime_fuzzy = "0.7"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Windows API
windows = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
dirs = "5.0"
once_cell = "1.19"

# Local dependencies
tenraku-core = { path = "../core" }
