[package]
name = "tenraku-bar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tenraku-bar"
path = "src/main.rs"

[dependencies]
# UI Framework
dioxus = { version = "0.6", features = ["desktop"] }
dioxus-desktop = "0.6"

# File watching for hot-reload
notify = "6.1"

# Async runtime
tokio = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# System information
sysinfo = "0.30"
battery = "0.7"
# netstat2 = "0.9"  # Disabled due to compilation issues, will enable when implementing network module

# Date/Time
chrono = "0.4"

# Windows API
windows = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
dirs = "5.0"
once_cell = "1.19"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
